<?xml version="1.0" encoding="UTF-8"?>

<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
        http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.dwarfeng</groupId>
        <artifactId>notify</artifactId>
        <version>3.0.0.a</version>
    </parent>

    <artifactId>notify-impl</artifactId>
    <name>notify-impl</name>
    <url>http://maven.apache.org</url>

    <properties>
        <!-- 进行工程编码声明 -->
        <!-- 进行 JDK 版本声明 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>25</maven.compiler.release>
    </properties>

    <dependencies>
        <!-- JetBrains 静态注解 -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
        </dependency>
        <!-- 单元测试 -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- 日志处理 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Jakarta Annotation -->
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
        </dependency>
        <!-- Jakarta Persistence -->
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
        <!-- Jakarta Validation -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <!-- Apache Commons 组件 -->
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <!-- Spring 框架 -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>
        <!-- Netty 网络框架 -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Zookeeper 客户端 -->
        <dependency>
            <groupId>org.apache.zookeeper</groupId>
            <artifactId>zookeeper</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Guava 工具库 -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Curator 组件 -->
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-framework</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-recipes</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.curator</groupId>
            <artifactId>curator-x-discovery</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Dubbo 微服务框架 -->
        <dependency>
            <groupId>org.apache.dubbo</groupId>
            <artifactId>dubbo</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.dubbo.extensions</groupId>
            <artifactId>dubbo-remoting-http</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.dubbo.extensions</groupId>
            <artifactId>dubbo-rpc-hessian</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Hessian 序列化组件 -->
        <dependency>
            <groupId>com.caucho</groupId>
            <artifactId>hessian</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Protobuf 组件 -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- MySQL Connector/J -->
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Druid 数据库连接池 -->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Hibernate 组件 -->
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
        </dependency>
        <!-- Jedis Redis 客户端 -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Jakarta EL 实现 -->
        <dependency>
            <groupId>org.glassfish.expressly</groupId>
            <artifactId>expressly</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- FastJson Json 工具 -->
        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
        </dependency>
        <!-- AspectJ 组件 -->
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>
        <!-- Mapstruct 框架 -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
        </dependency>
        <!-- Kafka 客户端 -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
        </dependency>
        <!-- Groovy 脚本组件 -->
        <dependency>
            <groupId>org.apache.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <type>pom</type>
        </dependency>
        <!-- Thumbnailator 缩略图组件 -->
        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
        </dependency>
        <!-- Dutil 工具库 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>dutil-basic</artifactId>
        </dependency>
        <!-- Subgrade 组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-basic</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-data</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-lifecycle</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>subgrade-lock</artifactId>
        </dependency>
        <!-- Spring-telqos 组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>spring-telqos-core</artifactId>
        </dependency>
        <!-- Spring-terminator 组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>spring-terminator-core</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Dwarfeng-datamark 组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>dwarfeng-datamark-core</artifactId>
        </dependency>
        <!-- Dwarfeng-ftp 组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>dwarfeng-ftp-core</artifactId>
        </dependency>
        <!-- Snowflake 服务 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>snowflake-distributed-service-stack</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>snowflake-distributed-service-api</artifactId>
        </dependency>
        <!-- 程序自身组件 -->
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>notify-base</artifactId>
        </dependency>
        <dependency>
            <groupId>com.dwarfeng</groupId>
            <artifactId>notify-sdk</artifactId>
        </dependency>
    </dependencies>

    <build>
        <!-- 插件列表 -->
        <plugins>
            <!-- Maven 清理插件，用于清理测试时留下的日志。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>logs</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <!-- Maven 编译插件，用于处理 Annotation Processor。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <!-- Maven 测试插件，用于选项式执行单元测试。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <skip>${project.surefire.skip}</skip>
                    <useModulePath>false</useModulePath>
                    <argLine>--enable-native-access=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <dubbo.json-framework.prefer>fastjson2</dubbo.json-framework.prefer>
                        <jdk.net.URLClassPath.disableClassPathURLCheck>
                            true
                        </jdk.net.URLClassPath.disableClassPathURLCheck>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <!-- Maven 强制规则插件，用于检查构建环境。 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-build-baseline</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[25,26)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>[3.9.16,)</version>
                                </requireMavenVersion>
                                <dependencyConvergence/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <!-- 配置资源目录 -->
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <!-- 配置测试资源目录 -->
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>
    </build>
</project>
